@@ -1,4 +1,4 @@
-#include "../hedley.h"
+#include "common.h"
 
 enum Foo {
   FOO_BAR = 1 << 0,
