@@ -1,4 +1,4 @@
-#include "../hedley.h"
+#include "common.h"
 
 HEDLEY_MESSAGE("Hello, world!")
 
