@@ -1,4 +1,4 @@
-#include "../hedley.h"
+#include "common.h"
 
 static void f(HEDLEY_NO_ESCAPE int *p) {
   *p += 1;
