@@ -1,4 +1,4 @@
-#include "../hedley.h"
+#include "common.h"
 
 static int* b;
 
