@@ -1,4 +1,4 @@
-#include "../hedley.h"
+#include "common.h"
 
 #define PREFIX foo_
 #define BAR bar
